<resources>
    <string name="app_name">File Manager Pro</string>

    <string name="subscribe_KEY1" >com.price.removeads.files</string>

    <string name="qintitle"><![CDATA[Play & Win Coins]]></string>
    <string name="qintdes"><![CDATA[Win 5,00,000 Coins & More]]></string>
    <string name="qintitle1">Play Now and Earn Up to 50,000</string>
    <string name="qintdes1"><![CDATA[Play and Earn 5,00,000 Coins & Mores]]></string>
    <string name="qnativetitle"><![CDATA[Play & Win Coins]]></string>


    <string name="FirstNative">23cb1e7806b11e94</string>
    <string name="FirstNative2">9084c47de2ad89f8</string>
    <string name="Nodata">No Data</string>
    <string name="SettingNative">907d971835b98e5b</string>
    <string name="Storageactivityinter">a172d10c638494b4</string>
    <string name="abtus">About us</string>
    <string name="action_settings">Settings</string>
    <string name="alphanumeric_only_error">May only contain alphanumerical chars</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="apk">Apk</string>
    <string name="ascending">Ascending</string>
    <string name="aspect_16_9">16:9</string>
    <string name="aspect_1_2">1:2</string>
    <string name="aspect_3_2">3:2</string>
    <string name="aspect_3_4">3:4</string>
    <string name="aspect_4_3">4:3</string>
    <string name="aspect_5_4">5:4</string>
    <string name="aspect_9_16">9:16</string>
    <string name="aspect_a_4">A4</string>
    <string name="aspect_a_5">A5</string>
    <string name="aspect_face_cover">Cover</string>
    <string name="aspect_face_post">Post</string>
    <string name="aspect_free">Free</string>
    <string name="aspect_ins_1_1">Ins 1:1</string>
    <string name="aspect_ins_4_5">Ins 4:5</string>
    <string name="aspect_ins_story">Ins Story</string>
    <string name="aspect_pin_post">Post</string>
    <string name="aspect_twit_header">Header</string>
    <string name="aspect_twit_post">Post</string>
    <string name="aspect_you_cover">Cover</string>
    <string name="audio">Audios</string>
    <string name="beauty">Beauty</string>
    <string name="brush">Brush</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Categories</string>
    <string name="compress">Compress</string>
    <string name="compress_file">Compress</string>
    <string name="confirm_close">Are you sure you want to close this activity?</string>
    <string name="confirm_exit">Do you really want to exit?</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="creatnewf">Create new folder</string>
    <string name="crop">Crop</string>
    <string name="dark">Dark</string>
    <string name="define_roundedimageview" />
    <string name="delete">Delete</string>
    <string name="descending">Descending</string>
    <string name="detail">Details</string>
    <string name="document">Document</string>
    <string name="documents">Documents</string>
    <string name="done">Done</string>
    <string name="download">Downloads</string>
    <string name="doyouexit">Do you want to exit</string>
    <string name="duration">Duration</string>
    <string name="edit">Edit</string>
    <string name="edit_file">Edit</string>
    <string name="email_address">Email address</string>
    <string name="empty">Empty</string>
    <string name="enjoying_the_app">Enjoying the app?</string>
    <string name="eraser">Eraser</string>
    <string name="exit">Exit</string>
    <string name="exit_app">Exit</string>
    <string name="extract">Extract</string>
    <string name="extract_file">Extract</string>
    <string name="extract_validation">Please enter extract file name</string>
    <string name="favourite">Favourite</string>
    <string name="favourites">Favourites</string>
    <string name="feedback_email">aperlomediainc@gmail.com</string>
    <string name="filename">File name</string>
    <string name="filesize">File size</string>
    <string name="filter">Filter</string>
    <string name="format">Format</string>
    <string name="good_5_stars">Good, 5 stars</string>
    <string name="hex">HEX:</string>
    <string name="ifyouchanegeextention">if you change this file s extension, you may not be able to open it.</string>
    <string name="imageactivityinter">a172d10c638494b4</string>
    <string name="images">Images</string>
    <string name="input_not_a_given_option">Input not a given option</string>
    <string name="install_app_ads">Install Now</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="isRTL">false</string>
    <string name="label">Label</string>
    <string name="letters_only_error">May only contain letters (A-Z)</string>
    <string name="light">Light</string>
    <string name="login">Login</string>
    <string name="message_dialog_feed_back">Request bug fix and implement new features via email</string>
    <string name="more">More</string>
    <string name="moreapp">More App</string>
    <string name="move">Move</string>
    <string name="name">Name</string>
    <string name="named">Name Descending</string>
    <string name="needsaccess">Write Access Required</string>
    <string name="needsaccesssummary">Please choose the root directory of 9</string>
    <string name="needsaccesssummary1">9to grant write access to operate</string>
    <string name="no">No</string>
    <string name="not_good">Not good</string>
    <string name="ok">Ok</string>
    <string name="order">Order</string>
    <string name="paint">Paint</string>
    <string name="password">Password</string>
    <string name="past">Paste</string>
    <string name="path">Path</string>
    <string name="permission_txt1">Please allow</string>
    <string name="permission_txt2">to access photos, videos, media and file on your device.</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="pp">Privacy Policy</string>
    <string name="prefs_theme_key">Theme</string>
    <string name="privacy_url">https://sites.google.com/view/filemanager-new/accueil</string>
    <string name="publisher">Aperlo Media Inc</string>
    <string name="rate_app">Rate App</string>
    <string name="rate_msg">Our team are working very hard to give you the best free application. Your 5-star review is worth more than all money. Please write a nice review in Google Play to encourage me.</string>
    <string name="rate_text">would you mind taking a moment to rate it?10It won\'t take more than a minute.</string>
    <string name="ratenow">Rate Now</string>
    <string name="rateus">Rate Us</string>
    <string name="recent_file">Recent File</string>
    <string name="remind_later">Remind later</string>
    <string name="rename">Rename</string>
    <string name="renamefolderorrep">Rename folder or replace existing one?.</string>
    <string name="replace">Replace</string>
    <string name="required">Required</string>
    <string name="resolutiont">Resolution</string>
    <string name="rrggbb">RRGGBB</string>
    <string name="save">Save</string>
    <string name="sd_card">Sd Card</string>
    <string name="search_menu_title">Search</string>
    <string name="selected">Selected</string>
    <string name="send">Send</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="shareus">Share Us</string>
    <string name="size">Size</string>
    <string name="sized">Size Descending</string>
    <string name="skip">Skip</string>
    <string name="smoothness">Smoothness</string>
    <string name="sortby">Sort by</string>
    <string name="sticker">Sticker</string>
    <string name="store">aidelra+apps</string>
    <string name="str_extract_validation_1">You already have a folder named</string>
    <string name="str_extract_validation_2">in destination folder.</string>
    <string name="strong_pw_requirements">Must contain a number, a lower- and uppercase letter and a special character</string>
    <string name="support">Support</string>
    <string name="system_default">System default</string>
    <string name="time">Time</string>
    <string name="timed">Time Descending</string>
    <string name="titel">Title</string>
    <string name="title_dialog_feed_back">Send a feed back</string>
    <string name="transparency">Transparency</string>
    <string name="user">User</string>
    <string name="video">Videos</string>
    <string name="yandex_ads_context">yandex:ads:context</string>
    <string name="yandex_ads_context_allow_parsing">allow-parsing</string>
    <string name="yandex_ads_context_do_not_parse">do-not-parse</string>
    <string name="yes">Yes</string>
    <string name="youalradyhavfolder">You already have a folder named test in destination folder.</string>
    <string name="zip_validation">Please enter zip name</string>


</resources>
