<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/bottom_dialog_bg_white" android:paddingTop="@dimen/_12sdp" android:paddingBottom="@dimen/_1sdp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/_14sdp" android:textStyle="bold" android:textColor="@color/black" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:text="@string/sortby"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginTop="@dimen/_15sdp" android:layout_marginRight="@dimen/_12sdp">
        <RadioGroup android:orientation="vertical" android:id="@+id/radio_button_group" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RadioButton android:textSize="@dimen/_13sdp" android:id="@+id/radio_Name_Asc" android:paddingLeft="@dimen/_8sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_6sdp" android:text="@string/name" app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:textSize="@dimen/_13sdp" android:id="@+id/radio_Name_Des" android:paddingLeft="@dimen/_6sdp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_3sdp" android:text="@string/named" app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:textSize="@dimen/_13sdp" android:id="@+id/radio_Size_Asc" android:paddingLeft="@dimen/_8sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_6sdp" android:text="@string/size" app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:textSize="@dimen/_13sdp" android:id="@+id/radio_Size_Des" android:paddingLeft="@dimen/_6sdp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_6sdp" android:text="@string/sized" app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:textSize="@dimen/_13sdp" android:id="@+id/radio_Time_Asc" android:paddingLeft="@dimen/_8sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_3sdp" android:text="@string/time" app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:textSize="@dimen/_13sdp" android:id="@+id/radio_Time_Dec" android:paddingLeft="@dimen/_6sdp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_3sdp" android:text="@string/timed" app:buttonTint="@color/radio_button_color"/>
        </RadioGroup>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp" android:layout_marginBottom="@dimen/_5sdp">
            <TextView android:textSize="@dimen/_11sdp" android:textColor="@color/gray_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_1sdp" android:text="@string/order"/>
            <TextView android:textSize="@dimen/_10sdp" android:textColor="@color/gray_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_7sdp" android:text=".................................................................................................." android:singleLine="true"/>
        </LinearLayout>
        <RadioGroup android:orientation="vertical" android:id="@+id/group_order" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RadioButton android:textSize="@dimen/_13sdp" android:id="@+id/radio_ascending" android:paddingLeft="@dimen/_8sdp" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_6sdp" android:text="@string/ascending" app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:textSize="@dimen/_13sdp" android:id="@+id/radio_descending" android:paddingLeft="@dimen/_8sdp" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_6sdp" android:text="@string/descending" app:buttonTint="@color/radio_button_color"/>
        </RadioGroup>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp">
            <LinearLayout android:id="@+id/btn_cancel" android:background="?attr/selectableItemBackground" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/_13sdp" android:textStyle="normal" android:textColor="@color/theme_color" android:gravity="center" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/cancel"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/btn_done" android:background="?attr/selectableItemBackground" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/_13sdp" android:textStyle="normal" android:textColor="@color/theme_color" android:gravity="center" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/done"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
