<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:id="@+id/ads" android:layout_width="match_parent" android:layout_height="400dp">
        <FrameLayout android:id="@+id/frame_layout_Exit" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </LinearLayout>
    <RelativeLayout android:background="@color/black" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/ads">
        <LinearLayout android:orientation="vertical" android:background="@color/white" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="25sp" android:textStyle="bold" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/exit"/>
            <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/doyouexit"/>
            <LinearLayout android:layout_gravity="right" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button android:textColor="@color/black" android:id="@+id/btn_yes" android:background="@color/cardview_shadow_end_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes"/>
                <Button android:textColor="@color/black" android:id="@+id/btn_no" android:background="@color/cardview_shadow_end_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no" android:layout_marginStart="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
